[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/Bobber.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Tools/bobberAnimated.png" type="Texture" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -63, -24, -16.0418, -3.69369, 16.0418, 3.69369, -32, -20, 0.176777, 0, -0.176777, 0, -13, -2 )
}

[sub_resource type="Animation" id=2]
resource_name = "BobberInWater"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Bobber:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Bobber:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 3.16228

[sub_resource type="Animation" id=4]
resource_name = "BobberInWater"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Bobber:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Bobber:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 3.16228

[node name="Bobber" type="Node2D"]
script = ExtResource( 1 )

[node name="Path2DRight" type="Path2D" parent="."]
position = Vector2( 48, 25 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2DRight"]
position = Vector2( -63, -24 )
rotation = 0.047573
loop = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Path2DRight/PathFollow2D"]
anims/BobberInWater = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Bobber" type="Sprite" parent="Path2DRight/PathFollow2D"]
rotation = -1.25489
texture = ExtResource( 2 )
hframes = 4
frame = 1

[node name="Tween" type="Tween" parent="Path2DRight/PathFollow2D/Bobber"]

[node name="Area2D" type="Area2D" parent="Path2DRight/PathFollow2D/Bobber"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2DRight/PathFollow2D/Bobber/Area2D"]
shape = SubResource( 6 )

[node name="Path2DLeft" type="Path2D" parent="."]
position = Vector2( -48, 25 )
rotation = -3.14159
scale = Vector2( 1, -1 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2DLeft"]
position = Vector2( -63, -24 )
rotation = 0.047573
loop = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Path2DLeft/PathFollow2D"]
anims/BobberInWater = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="Bobber" type="Sprite" parent="Path2DLeft/PathFollow2D"]
rotation = -1.25489
texture = ExtResource( 2 )
hframes = 4
frame = 1

[node name="Tween" type="Tween" parent="Path2DLeft/PathFollow2D/Bobber"]

[node name="Area2D" type="Area2D" parent="Path2DLeft/PathFollow2D/Bobber"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2DLeft/PathFollow2D/Bobber/Area2D"]
scale = Vector2( 1, 1 )
shape = SubResource( 7 )

[connection signal="tween_completed" from="Path2DRight/PathFollow2D/Bobber/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_completed" from="Path2DLeft/PathFollow2D/Bobber/Tween" to="." method="_on_Tween_tween_completed"]
